<?xml version="1.0" encoding="utf-8"?>

<!-- SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG -->
<!-- SPDX-License-Identifier: MIT -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene">

    <ImageView
        android:id="@+id/imageView_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_title"
        android:scaleType="fitStart"
        android:src="@drawable/top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_title"
        android:scaleType="fitStart"
        android:src="@drawable/ic_app_logo_4c"
        app:layout_constraintEnd_toEndOf="@+id/textView_titel"
        app:layout_constraintTop_toTopOf="@+id/textView_titel"
        app:layout_constraintBottom_toBottomOf="@+id/textView_subtitel" />


    <TextView
        android:id="@+id/textView_subtitel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="0dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/app_subtitle"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/textView_titel" />

    <TextView
        android:id="@+id/textView_titel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_I" />

    <TextView
        android:id="@+id/textView_cardTap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_brandprotection_tap"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/engineering_dark"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h_II" />

    <TextView
        android:id="@+id/textView_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_cott_server"
        android:textColor="@color/engineering_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h_III" />

    <EditText
        android:id="@+id/editText_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_regular"
        android:inputType="textUri"
        android:text="@string/string_default_link"
        android:textColor="@color/engineering_dark"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/textView_config"
        android:autofillHints="@string/link_desc"
        android:hint="@string/link_desc"
        />


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_II"
        app:layout_constraintTop_toBottomOf="@+id/editText_link"
        app:srcCompat="@drawable/icon_cert_lightgrey"
        android:contentDescription="@string/state_desc" />



    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_II"
        app:srcCompat="@drawable/icon_return_green"
        android:contentDescription="@string/return_desc" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_II"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_III"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.008" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_II"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_III"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />



</androidx.constraintlayout.widget.ConstraintLayout>