<?xml version="1.0" encoding="utf-8"?>

<!-- SPDX-FileCopyrightText: 2024 Infineon Technologies AG -->
<!-- SPDX-License-Identifier: MIT -->

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene2">

    <ImageView
        android:id="@+id/imageView_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_title"
        android:scaleType="fitStart"
        android:src="@drawable/top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_title"
        android:scaleType="fitEnd"
        android:src="@drawable/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_title"
        android:scaleType="fitStart"
        android:src="@drawable/ic_app_logo_4c"
        app:layout_constraintEnd_toEndOf="@+id/textView_titel"
        app:layout_constraintTop_toTopOf="@+id/textView_titel"
        app:layout_constraintBottom_toBottomOf="@+id/textView_subtitel" />


    <TextView
        android:id="@+id/textView_titel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_I" />

    <TextView
        android:id="@+id/textView_subtitel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="0dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/app_subtitle"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/textView_titel" />

    <TextView
        android:id="@+id/textView_cardTap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_card_tap"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h_II" />

    <ImageView
        android:id="@+id/image_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1.6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_II"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/textView_cardTap"
        app:srcCompat="@drawable/icon_smartphone"
        android:contentDescription="@string/phone_desc" />


    <ImageView
        android:id="@+id/image_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_card"
        app:layout_constraintDimensionRatio="1.6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView_cardTap"
        android:contentDescription="@string/tag_desc" />


    <TextView
        android:id="@+id/textView_usecase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_usecase"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h_III" />

    <ImageButton
        android:id="@+id/button_brandProtection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_cert_lightgrey"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_II"
        app:layout_constraintTop_toBottomOf="@+id/textView_usecase"
        android:contentDescription="@string/button_desc" />

    <TextView
        android:id="@+id/textView_brandProtection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_brandprot"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_II"
        app:layout_constraintTop_toBottomOf="@+id/button_brandProtection" />

    <ImageButton
        android:id="@+id/button_connectionHandover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_ble_lightgrey"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_II"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/textView_adt"
        android:contentDescription="@string/button_desc" />

    <TextView
        android:id="@+id/textView_connectionHandover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_ble_connection"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_II"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/button_connectionHandover" />

    <ImageButton
        android:id="@+id/button_passThrough"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_passthrough_lightgrey"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView_usecase"
        android:contentDescription="@string/button_desc" />


    <TextView
        android:id="@+id/textView_passThrough"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_passThrough"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintTop_toBottomOf="@+id/button_passThrough" />

    <ImageButton
        android:id="@+id/button_adt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_adt_lightgrey"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_II"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/textView_usecase"
        android:contentDescription="@string/button_desc" />


    <TextView
        android:id="@+id/textView_adt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_adt"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_II"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_I"
        app:layout_constraintTop_toBottomOf="@+id/button_adt" />


    <ImageButton
        android:id="@+id/button_reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView_adt"
        app:srcCompat="@drawable/icon_reset_lightgrey"
        android:contentDescription="@string/button_desc" />


    <TextView
        android:id="@+id/textView_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_regular"
        android:text="@string/string_reset"
        android:textAlignment="center"
        android:textColor="@color/engineering_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_V"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_IV"
        app:layout_constraintTop_toBottomOf="@+id/button_reset" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_II"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_III"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.008" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_II"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_III"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

</androidx.constraintlayout.motion.widget.MotionLayout>